Added thickness and padding to `Divider`

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2318,7 +2318,6 @@ body {
 	&--vertical {
 		flex-direction: column;
 		height: 100%;
-		width: $base-unit-half;
 	}
 
 	&--start {
@@ -2331,6 +2330,34 @@ body {
 
 	&--end {
 		justify-content: end;
+	}
+
+	&--thickness-vertical {
+		&--1 {
+			width: 1px;
+		}
+
+		&--2 {
+			width: 2px;
+		}
+
+		&--half {
+			width: $base-unit-half;
+		}
+	}
+
+	&--thickness-horizontal {
+		&--1 {
+			height: 1px;
+		}
+
+		&--2 {
+			height: 2px;
+		}
+
+		&--half {
+			height: $base-unit-half;
+		}
 	}
 }
 
