--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -345,6 +345,7 @@ body {
 		text-align: left;
 		margin: 0;
 		padding: 0 0 0 44px;
+		@include nonselectable;
 
 		&:before,
 		&:after {
@@ -363,19 +364,17 @@ body {
 		&:before {
 			left: 1px;
 			width: 34px;
-			height: 14px;
+			height: 20px;
 			background-color: #9e9e9e;
-			border-radius: 8px;
+			border-radius: 10px;
 		}
 
 		&:after {
-			left: 0;
-			width: 20px;
-			height: 20px;
+			left: 3px;
+			width: 15px;
+			height: 15px;
 			background-color: #fafafa;
 			border-radius: 50%;
-			box-shadow: 0 $base-unit-half 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098),
-				0 1px $base-unit-half 0 rgba(0, 0, 0, 0.084);
 		}
 
 		.switch-on {
@@ -393,9 +392,9 @@ body {
 
 	.switch-input:checked+.switch-label:after {
 		background-color: $secondary-color-normal;
-		-ms-transform: translate(80%, -50%);
-		-webkit-transform: translate(80%, -50%);
-		transform: translate(80%, -50%);
+		-ms-transform: translate(100%, -50%);
+		-webkit-transform: translate(100%, -50%);
+		transform: translate(100%, -50%);
 	}
 
 	.switch-input:checked+.switch-label .switch-on {
