--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -354,9 +354,6 @@ body {
 			margin: 0;
 			outline: 0;
 			top: 50%;
-			-ms-transform: translate(0, -50%);
-			-webkit-transform: translate(0, -50%);
-			transform: translate(0, -50%);
 			-webkit-transition: all 0.3s ease;
 			transition: all 0.3s ease;
 		}
@@ -367,14 +364,20 @@ body {
 			height: 20px;
 			background-color: #9e9e9e;
 			border-radius: 10px;
+			-ms-transform: translate(0, -50%);
+			-webkit-transform: translate(0, -50%);
+			transform: translate(0, -50%);
 		}
 
 		&:after {
 			left: 3px;
-			width: 15px;
-			height: 15px;
+			width: 12px;
+			height: 12px;
 			background-color: #fafafa;
 			border-radius: 50%;
+			-ms-transform: translate(0, -6px);
+			-webkit-transform: translate(0, -6px);
+			transform: translate(0, -6px);
 		}
 
 		.switch-on {
@@ -392,9 +395,11 @@ body {
 
 	.switch-input:checked+.switch-label:after {
 		background-color: $secondary-color-normal;
-		-ms-transform: translate(100%, -50%);
-		-webkit-transform: translate(100%, -50%);
-		transform: translate(100%, -50%);
+		-ms-transform: translate(15px, -7.5px);
+		-webkit-transform: translate(15px, -7.5px);
+		transform: translate(15px, -7.5px);
+		width: 15px;
+		height: 15px;
 	}
 
 	.switch-input:checked+.switch-label .switch-on {
