--- a/style/_base.scss
+++ b/style/_base.scss
@@ -1,21 +1,21 @@
 @use "sass:math";
 
 // Base Unit
-$base-unit: 10px !default;;
+$base-unit: 10px !default;
 $base-unit-half: math.div($base-unit, 2);
 $base-unit-two: $base-unit * 2;
 
 // Heights
-$row-height-small: $base-unit * 3 !default;;
-$row-height-medium: $base-unit * 4 !default;;
-$row-height-large: $base-unit * 5 !default;;
-$row-height-over: $base-unit * 7 !default;;
+$row-height-small: $base-unit * 3 !default;
+$row-height-medium: $base-unit * 4 !default;
+$row-height-large: $base-unit * 5 !default;
+$row-height-over: $base-unit * 7 !default;
 
 // Border Radius
-$border-radius-normal: $base-unit !default;;
-$border-radius-half: $base-unit-half !default;;
-$border-radius-full: $base-unit * 2 !default;;
-$border-radius-none: 0 !default;;
+$border-radius-normal: $base-unit !default;
+$border-radius-half: $base-unit-half !default;
+$border-radius-full: $base-unit * 2 !default;
+$border-radius-none: 0 !default;
 
 $box-shadow: 0px 3px 10px rgba(27, 78, 96, 0.2) !default; // deprecated
 $box-shadow-dark: 0px 3px 10px rgba(27, 78, 96, 0.5) !default; // deprecated
