--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -772,7 +772,6 @@ body {
 
 .vieolo-item-row {
 	width: 100%;
-	margin: 6px 0;
 
 	&__item-content {
 		padding: 0 $base-unit;
@@ -820,25 +819,7 @@ body {
 		@include center-by-flex-column;
 	}
 
-	&--border-radius-default {
-		border-radius: $border-radius-normal;
-	}
-
-	&--border-radius-full {
-		border-radius: $border-radius-full;
-	}
-
-	&--border-radius-normal {
-		border-radius: $border-radius-normal;
-	}
-
-	&--border-radius-half {
-		border-radius: $border-radius-half;
-	}
-
-	&--border-radius-none {
-		border-radius: 0px;
-	}
+	@include borderRadiusMixin(border-radius, true, $border-radius-normal)
 }
 
 .vieolo-pdf-viewer-component {
@@ -2263,25 +2244,7 @@ body {
 
 
 .vieolo-card {
-	&--border-radius-default {
-		border-radius: $border-radius-normal;
-	}
-
-	&--border-radius-full {
-		border-radius: $border-radius-full;
-	}
-
-	&--border-radius-normal {
-		border-radius: $border-radius-normal;
-	}
-
-	&--border-radius-half {
-		border-radius: $border-radius-half;
-	}
-
-	&--border-radius-none {
-		border-radius: 0px;
-	}
+	@include borderRadiusMixin(border-radius, true, $border-radius-normal)
 }
 
 
