--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2701,3 +2701,12 @@ body {
 		}
 	}	
 }
+
+
+.vieolo-image-viewer {	
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;	
+}
