Added top border to the dropdown menu items

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -659,6 +659,10 @@ body {
 			background-color: $primary-color-light;
 		}
 
+		&--top-border {
+			border-top: 2px solid $primary-color-light;
+		}
+
 		p {
 			padding: 0px $base-unit-half;
 		}
