--- a/style/_base.scss
+++ b/style/_base.scss
@@ -70,6 +70,7 @@ $success-color-text-light: $success-color-normal !default;
 
 // Root Colors
 $background-color: #fffffb !default;
+$neutral-color: #f2f2f2 !default;
 
 $content-background-color: #fffffb !default; // deprecated (use background-content-color instead) 
 $background-content-color: $content-background-color !default;
