--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -121,8 +121,8 @@ body {
 	height: 30px;
 	line-height: 30px;
 	border-radius: $base-unit-half;
-	background-color: #f2f2f2;
-	border: 2px solid #f2f2f2;
+	background-color: $neutral-color;
+	border: 2px solid $neutral-color;
 	font-size: 14px;
 	box-sizing: border-box;
 	padding: 2px $base-unit-half;
@@ -140,8 +140,8 @@ body {
 	font-size: 13px;
 	border-radius: $base-unit-half;
 	height: 100px;
-	background-color: #f2f2f2;
-	border: 2px solid #f2f2f2;
+	background-color: $neutral-color;
+	border: 2px solid $neutral-color;
 
 	&:focus {
 		outline: none;
