Separated the `set` components from `row` compound components

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2430,7 +2430,7 @@ body {
 	}
 }
 
-.vieolo-set-row-template {
+.vieolo-component-row-template {
 	padding: $base-unit-half;
 	grid-template-columns: 1fr 50px;
 	border: 2px solid transparent;
