Improved the responsiveness of the form dialog

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -2222,5 +2222,9 @@ html {
 // #endregion
 
 @mixin for-touch-device {
-	@media (pointer: coarse) {@content}
+	@media (pointer: coarse) {@content;}
+}
+
+@mixin for-apple-touch-device {
+	@supports (-webkit-touch-callout: none) {@content;}
 }
