--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1522,7 +1522,7 @@ body {
 		height: $row-height-large;
 		border-top: 2px solid $neutral-color;
 		display: flex;
-		flex-direction: row;
+		justify-content: space-between;
 		align-items: center;
 		padding: 0 $base-unit;
 		
